VSE Regression: Duplicating grouped strips does not maintain F-Curve keyframes #96595

Closed
opened 2022-03-18 14:12:01 +01:00 by Jonata Bolzan · 9 comments

System Information
Operating system: Ubuntu 21.10
Graphics card: Mesa Intel Xe Graphics (TGL GT2)

Blender Version
Broken: 3.1.0
Worked: 3.0.1

Short description of error
When you duplicate a grouped strip that have some element with F-Curve keyframes, they are lost.

Exact steps for others to reproduce the error
In the video you can see the steps:

Create a strip and add some animation to it. For example, add Translate and set some X values.
Duplicate them. You can see that the animation is correctly duplicated.

Now group the initial strips and duplicate it. You can see that the duplicated strip loses the animation.

#96861.blend
blender_bug.webm

**System Information** Operating system: Ubuntu 21.10 Graphics card: Mesa Intel Xe Graphics (TGL GT2) **Blender Version** Broken: 3.1.0 Worked: 3.0.1 **Short description of error** When you duplicate a grouped strip that have some element with F-Curve keyframes, they are lost. **Exact steps for others to reproduce the error** In the video you can see the steps: Create a strip and add some animation to it. For example, add Translate and set some X values. Duplicate them. You can see that the animation is correctly duplicated. Now group the initial strips and duplicate it. You can see that the duplicated strip loses the animation. [#96861.blend](https://archive.blender.org/developer/F12955916/T96861.blend) [blender_bug.webm](https://archive.blender.org/developer/F12933332/blender_bug.webm)
Author

Added subscriber: @jonata

Added subscriber: @jonata

#96861 was marked as duplicate of this issue

#96861 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscribers: @Midna, @PratikPB2123

Added subscribers: @Midna, @PratikPB2123
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Regression in {eddad4e9a1ac} or (e49bf4019b)
@iss , can you check? This was working as intended on previous versions so raising the priority

Regression in {eddad4e9a1ac} or (e49bf4019b49) @iss , can you check? This was working as intended on previous versions so raising the priority

This issue was referenced by c14ed182f5

This issue was referenced by c14ed182f516cf723b88603a3282d692ba631feb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-04-06 15:12:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96595
No description provided.