Fix T96595: Animation not duplicated for meta children

Iterate over meta strip content and duplicate animation for all strips.
recursively.